Remove old roadmap filename

--- a/web_apps/living-graph-transform-system.html
+++ b/web_apps/living-graph-transform-system.html
@@ -497,7 +497,7 @@
         <div class="row"><label>Repository assets</label></div>
         <div class="small">
           <ul style="margin:6px 0 0 18px;padding:0">
-            <li><code>docs/roadmap.md</code> — DAG/fibration roadmap.</li>
+            <li><code>docs/living-graph-transform-roadmap.md</code> — DAG/fibration roadmap.</li>
             <li><code>samples/</code> — input/expected Graphviz pairs.</li>
             <li><code>.ai/agent-notes.md</code> — diff + test guidance.</li>
           </ul>
