--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ body{font-family:Arial, sans-serif;margin:20px;}
 <body>
 <h1>Project Examples</h1>
 <p><a href="https://lawrencerowland.github.io/">Home</a></p>
+<p>
+  <a href="roadmaps.html">Roadmaps</a>
+  &mdash;
+  <a href="docs/living-graph-transform-roadmap.md">Living Graph Transform Roadmap</a>
+</p>
 <div class="filter" id="filter"></div>
 <div id="examples"></div>
 <script>
