--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ body{font-family:Arial, sans-serif;margin:20px;}
   <a href="roadmaps.html">Roadmaps</a>
   &mdash;
   <a href="docs/living-graph-transform-roadmap.md">Living Graph Transform Roadmap</a>
+  &mdash;
+  <a href="docs/project-health-atlas-roadmap.md">Project Health Atlas Roadmap — Proof Bundles</a>
 </p>
 <div class="filter" id="filter"></div>
 <div id="examples"></div>
