--- a/web_apps/living-graph-transform-system.html
+++ b/web_apps/living-graph-transform-system.html
@@ -43,7 +43,7 @@
   .dot{width:10px;height:10px;border-radius:50%}
   .dot.ok{background:var(--ok)} .dot.warn{background:var(--warn)} .dot.bad{background:var(--bad)}
   .dot.base{background:var(--accent2)} .dot.root{background:var(--accent)}
-  #cy{height:100%;width:100%;background:radial-gradient(ellipse at 50% -10%, #15203a 0%, #0b0f1a 60%);border:1px solid rgba(255,255,255,0.08);border-radius:12px}
+  #cy{height:100%;min-height:70vh;width:100%;background:radial-gradient(ellipse at 50% -10%, #15203a 0%, #0b0f1a 60%);border:1px solid rgba(255,255,255,0.08);border-radius:12px}
   #sandboxCy{height:320px;width:100%;background:radial-gradient(ellipse at 50% -10%, #15203a 0%, #0b0f1a 60%);border:1px solid rgba(255,255,255,0.08);border-radius:12px}
   .graph-surface{width:100%;height:100%;display:block}
   .graph-bg{fill:transparent}
@@ -65,6 +65,8 @@
   textarea{width:100%;min-height:120px;resize:vertical}
   .tab-pane{display:none;flex-direction:column;gap:10px}
   .tab-pane.active{display:flex}
+  main.panel{display:flex;flex-direction:column}
+  main.panel .tab-pane{flex:1}
   .split{display:grid;grid-template-columns:1fr 1fr;gap:10px}
   .pane{background:rgba(255,255,255,0.03);border:1px solid rgba(255,255,255,0.08);border-radius:10px;padding:10px;min-height:200px}
   .pane pre{white-space:pre-wrap;font-size:12px;max-height:240px;overflow:auto}
